--- a/src/App.css
+++ b/src/App.css
@@ -7,25 +7,27 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #000;
+  width: 60vh;
+  min-height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border-radius: 30px;
+
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.text{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 @keyframes App-logo-spin {
